--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "scripts": {
     "build": "./node_modules/.bin/tsc",
     "dev": "./node_modules/.bin/nodemon",
-    "start": "NODE_ENV=production node dist/server.js"
+    "start:win": "set NODE_ENV=production && node dist/server.js",
+    "start:linux": "export NODE_ENV=production && node dist/server.js"
   },
   "dependencies": {
     "@types/compression": "^0.0.36",
