--- a/package.json
+++ b/package.json
@@ -1,30 +1,30 @@
 {
-  "name": "express-ts",
-  "version": "1.0.0",
-  "description": "express with typescript",
-  "keywords": [
-    "express",
-    "typescript"
-  ],
-  "author": "Wattana Ruengmucha",
-  "license": "MIT",
-  "scripts": {
-    "build": "./node_modules/.bin/tsc",
-    "dev": "./node_modules/.bin/nodemon",
-    "lint": "./node_modules/.bin/tslint -c tslint.json 'src/**/*.ts'",
-    "start:win": "yarn lint && set NODE_ENV=production && node dist/server.js",
-    "start:linux": "yarn lint && export NODE_ENV=production && node dist/server.js"
-  },
-  "dependencies": {
-    "@types/compression": "^0.0.36",
-    "@types/express": "^4.16.0",
-    "compression": "^1.7.3",
-    "express": "^4.16.4"
-  },
-  "devDependencies": {
-    "nodemon": "^1.18.4",
-    "ts-node": "^7.0.1",
-    "tslint": "^5.11.0",
-    "typescript": "^3.1.3"
-  }
+	"name": "express-ts",
+	"version": "1.0.0",
+	"description": "express with typescript",
+	"keywords": [
+		"express",
+		"typescript"
+	],
+	"author": "Wattana Ruengmucha",
+	"license": "MIT",
+	"scripts": {
+		"build": "yarn lint && ./node_modules/.bin/tsc",
+		"dev": "./node_modules/.bin/nodemon",
+		"lint": "./node_modules/.bin/tslint -c tslint.json 'src/**/*.ts'",
+		"start:win": "set NODE_ENV=production && node dist/server.js",
+		"start:linux": "export NODE_ENV=production && node dist/server.js"
+	},
+	"dependencies": {
+		"@types/compression": "^0.0.36",
+		"@types/express": "^4.16.0",
+		"compression": "^1.7.3",
+		"express": "^4.16.4"
+	},
+	"devDependencies": {
+		"nodemon": "^1.18.4",
+		"ts-node": "^7.0.1",
+		"tslint": "^5.11.0",
+		"typescript": "^3.1.3"
+	}
 }
