--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
     "@types/cookie-parser": "^1.4.1",
     "@types/express": "^4.16.0",
     "@types/helmet": "^0.0.42",
+    "@types/jsonwebtoken": "^8.3.0",
     "@types/morgan": "^1.7.35",
     "compression": "^1.7.3",
     "cookie-parser": "^1.4.3",
     "ejs": "^2.6.1",
     "express": "^4.16.4",
     "helmet": "^3.15.0",
+    "jsonwebtoken": "^8.4.0",
     "morgan": "^1.9.1"
   },
   "devDependencies": {
