--- a/package.json
+++ b/package.json
@@ -29,12 +29,12 @@
     "helmet": "^3.15.0",
     "jsonwebtoken": "^8.4.0",
     "morgan": "^1.9.1",
+    "typescript": "^3.4.5",
     "xss": "^1.0.3"
   },
   "devDependencies": {
     "nodemon": "^1.18.4",
     "ts-node": "^7.0.1",
-    "tslint": "^5.11.0",
-    "typescript": "^3.1.3"
+    "tslint": "^5.11.0"
   }
 }
